--- a/3-week3/week3-exercises.ipynb
+++ b/3-week3/week3-exercises.ipynb
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
     "    # Check if the column is of object or category type\n",
     "    if df[col].dtype == 'object' or df[col].dtype.name == 'category':\n",
     "        # Initialize the OneHotEncoder\n",
-    "        encoder = OneHotEncoder(sparse=False, drop='first')\n",
+    "        encoder = OneHotEncoder(sparse=False)\n",
     "        \n",
     "        # Fit and transform the column and convert it to a DataFrame\n",
     "        one_hot_encoded = encoder.fit_transform(df[[col]])\n",
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1061,8 +1061,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>yumminess</th>\n",
+       "      <th>color_blue</th>\n",
        "      <th>color_green</th>\n",
        "      <th>color_red</th>\n",
+       "      <th>target_apple</th>\n",
        "      <th>target_grass</th>\n",
        "      <th>target_moon</th>\n",
        "      <th>target_sky</th>\n",
@@ -1073,6 +1075,8 @@
        "      <th>0</th>\n",
        "      <td>10</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1081,6 +1085,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1090,7 +1096,9 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1100,7 +1108,9 @@
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -1108,6 +1118,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1117,8 +1129,10 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>9</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1128,16 +1142,24 @@
        "</div>"
       ],
       "text/plain": [
-       "   yumminess  color_green  color_red  target_grass  target_moon  target_sky\n",
-       "0         10          0.0        1.0           0.0          0.0         0.0\n",
-       "1          2          0.0        0.0           0.0          0.0         1.0\n",
-       "2          3          1.0        0.0           1.0          0.0         0.0\n",
-       "3          1          0.0        1.0           0.0          0.0         1.0\n",
-       "4          6          0.0        0.0           0.0          1.0         0.0\n",
-       "5          9          1.0        0.0           0.0          0.0         0.0"
+       "   yumminess  color_blue  color_green  color_red  target_apple  target_grass  \\\n",
+       "0         10         0.0          0.0        1.0           1.0           0.0   \n",
+       "1          2         1.0          0.0        0.0           0.0           0.0   \n",
+       "2          3         0.0          1.0        0.0           0.0           1.0   \n",
+       "3          1         0.0          0.0        1.0           0.0           0.0   \n",
+       "4          6         1.0          0.0        0.0           0.0           0.0   \n",
+       "5          9         0.0          1.0        0.0           1.0           0.0   \n",
+       "\n",
+       "   target_moon  target_sky  \n",
+       "0          0.0         0.0  \n",
+       "1          0.0         1.0  \n",
+       "2          0.0         0.0  \n",
+       "3          0.0         1.0  \n",
+       "4          1.0         0.0  \n",
+       "5          0.0         0.0  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
